--- a/config/database.yml
+++ b/config/database.yml
@@ -13,9 +13,9 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
-  database: tasklist_production
-  username: tasklist
-  password: <%= ENV['TASKLIST_DATABASE_PASSWORD'] %>
+  database: message-board_production
+  username: message-board
+  password: <%= ENV['MESSAGE-BOARD_DATABASE_PASSWORD'] %>
 
 development:
   <<: *default
